--- a/rbnGrotte/src/Styles/Detail.css
+++ b/rbnGrotte/src/Styles/Detail.css
@@ -59,6 +59,8 @@ body, html {
   
   .description {
     border-bottom: 1px solid #EBEBEB;
+    display: flex;
+    justify-content: center;
   }
   .container-information{
     display: flex;
@@ -92,4 +94,25 @@ body, html {
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
     border-radius: 4px; 
     margin-bottom: 20px; 
+  }
+  .image-slider-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 300px; /* Ajustez la hauteur selon vos besoins */
+  }
+  
+  .image-slider-container .main-image img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: contain; /* Ajustez ceci en fonction de votre mise en page */
+  }
+  .calendar {
+    display: flex;
+    justify-content: center;
+  }
+  .container-calendar-information {
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-around;
   }
