--- a/rbnGrotte/src/Styles/ViewApi.css
+++ b/rbnGrotte/src/Styles/ViewApi.css
@@ -10,7 +10,7 @@
   background-color: #fff5e5; 
   box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2); 
   border-radius: 16px; 
-  padding: 20px;
+  padding: 0px 0px 20px 0px;
   margin: 10px;
   width: calc(33.33% - 40px); 
   display: flex; 
@@ -55,7 +55,9 @@
   font-size: 18px;
   color: #333;
 }
-
+.card h2 {
+  padding-left: 10px;
+}
 .card ul {
   list-style: none;
   padding: 0;
@@ -72,8 +74,15 @@
 .etoile-favori {
   font-size: 24px;
   cursor: pointer;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 20px;
 }
 
 .etoile-favori.active {
   color: gold;
+}
+.container-favori-title {
+  display: flex;
+  justify-content: space-between;
 }
