--- a/rbnGrotte/src/Styles/Detail.css
+++ b/rbnGrotte/src/Styles/Detail.css
@@ -1,12 +1,10 @@
 
-
 body, html {
     margin: 0;
     padding: 0;
-    background-color: #f7f7f7;
+    background-color: wheat;
     color: #484848;
   }
-  
 
   .container {
     width: 80%;
@@ -16,7 +14,16 @@ body, html {
     border-radius: 4px;
   }
   
+  .react-calendar {
+    border-radius: 15px;
+  }
+  
   .photo-details {
+    background-color: #624108;
+    border-radius: 50px;
+    border: 1px solid #ccc;
+    padding: 10px;
+    margin: 10px;
     display: flex;
     align-items: center; 
     justify-content: center;
@@ -24,11 +31,12 @@ body, html {
   }
   
   .principal-information img {
-    max-width: 100%; 
-    max-height: 400px; 
-    width: auto; 
+    width: 340px; 
     height: auto; 
-    border-radius: 4px;
+    border-radius: 5px; 
+    display: block;
+    margin-left: auto; 
+    margin-right: auto
   }
   
   
@@ -37,28 +45,40 @@ body, html {
     grid-template-columns: repeat(auto-fit, minmax(100px, 1fr)); 
     padding: 0;
     margin-top: 20px;
+    margin-bottom: 15px;
   }
   
   .secondary-images-container img {
-    width: 100%; 
-    height: 150px;
+    width: 120%; 
+    height: 200px;
     object-fit: cover; 
-    border-radius: 4px;
+    border-radius: 8px;
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+
+  #title {
+    font-weight: bold;
+    font-size: 60px;
+    padding: 0;
+    margin: 10px;
   }
 
   p {
     text-align: center;
     padding: 20px;
-    font-size: 16px;
+    font-size: 15px;
+    font-weight: bold;
   }
   
 
   .description, .container-information, .donnees-information {
+    font-size: 25px;
     padding: 20px;
   }
   
   .description {
-    border-bottom: 1px solid #EBEBEB;
+    
     display: flex;
     justify-content: center;
   }
@@ -68,6 +88,12 @@ body, html {
   }
   .container-information h3 {
     margin-bottom: 10px;
+  }
+
+  h3 {
+    margin: 0;
+    font-size: 39px;
+    color: rgb(17, 128, 91);
   }
   
   .container-information ul {
@@ -80,34 +106,43 @@ body, html {
   }
   
   .donnees-information p {
-    margin-bottom: 5px;
+    font-size: 20px;
+    /* margin-bottom: 5px; */
   }
   
   .container-information strong {
     font-weight: bold;
-    
   }
   
   .donnees-information, .avis-user {
     padding: 20px;
-    background-color: #ffffff; 
-    box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1); 
-    border-radius: 4px; 
-    margin-bottom: 20px; 
+    background-size: cover;
+    background-position: center;
+    background-blend-mode: overlay;
+    background-color: rgba(255, 255, 255, 0.8); /* Assure que le texte reste lisible */
+    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    border-radius: 20px;
+  
   }
   .image-slider-container {
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 300px; /* Ajustez la hauteur selon vos besoins */
+    height: 300px;
   }
   
   .image-slider-container .main-image img {
     max-width: 100%;
     max-height: 100%;
-    object-fit: contain; /* Ajustez ceci en fonction de votre mise en page */
+    object-fit: contain; 
+  }
+
+  .donnees-information {
+    margin-right: 28%;
+    height: 100%;
   }
   .calendar {
+    margin-left: 28%;
     display: flex;
     justify-content: center;
   }
