change background-color imgButton

--- a/rbnGrotte/src/Components/Filter.css
+++ b/rbnGrotte/src/Components/Filter.css
@@ -13,7 +13,7 @@
   border: 0;
   display: flex;
   flex-direction: column;
-  background-color: #F7F7F7;
+  background-color: #F9F0DD;
 }
 
 .titleImg {
